# python3-genai-langchain

./: .env  data.txt  index.py  langchain_messages.py  llm_gemini.py  main.py  pyproject.toml  ragapp.py
